--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,18 @@ name = "ws_s"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "server"
+path = "src/server.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
 [dependencies]
 anyhow = "1.0.94"
 futures-util = "0.3.31"
 log = "0.4.22"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-tungstenite = "0.24.0"
+futures-channel = "0.3.31"
