--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ log = "0.4.22"
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-tungstenite = "0.24.0"
 futures-channel = "0.3.31"
+uuid = { version = "1.11.0", features = ["v4"] }
