--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tokio = { version = "1.42.0", features = ["full"] }
 tokio-tungstenite = "0.24.0"
 futures-channel = "0.3.31"
 uuid = { version = "1.11.0", features = ["v4"] }
+message-pack = {path = "message-pack"}
