--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ futures-channel = "0.3.31"
 uuid = { version = "1.11.0", features = ["v4"] }
 message-pack = {path = "message-pack"}
 random_name_generator = "0.3.6"
+rfd = "0.15.1"
