--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ uuid = { version = "1.11.0", features = ["v4"] }
 message-pack = {path = "message-pack"}
 random_name_generator = "0.3.6"
 rfd = "0.15.1"
+crossterm = "0.28.1"
+
