--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,4 +26,5 @@ crossterm = "0.28.1"
 atty = "0.2.14"
 simple_logger = "5.0.0"
 axum = { version = "0.7.9", features = ["ws"] }
-
+tower = "0.5.1"
+tower-http = { version = "0.6.2", features = ["cors", "fs"] }
