--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ simple_logger = "5.0.0"
 axum = { version = "0.7.9", features = ["ws"] }
 tower = "0.5.1"
 tower-http = { version = "0.6.2", features = ["cors", "fs"] }
+
+
+[build-dependencies]
+fs_extra = "1.3.0"
