--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ simple_logger = "5.0.0"
 axum = { version = "0.7.9", features = ["ws"] }
 tower = "0.5.1"
 tower-http = { version = "0.6.2", features = ["cors", "fs"] }
+clap = { version = "4.5.23", features = ["derive", "env"] }
 
 
 [build-dependencies]
