--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,7 @@ tokio-stream = "0.1.17"
 [build-dependencies]
 fs_extra = "1.3.0"
 log = "0.4.22"
+
+[profile.release]
+debug = 1
+split-debuginfo = "packed"
